xidlc/tests/snapshots/codegen_snapshot__ts__http_stream_sse_bindings.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_stream_sse_bindings.client.ts
===============
// Generated by xidlc. DO NOT EDIT.
import type*as types from"./http_stream_sse_bindings";
import*as zodSchemas from"./http_stream_sse_bindings.iface.zod";
export type FetchLike = (
input : RequestInfo | URL, init ? : RequestInit
) => Promise<
Response
>;
export interface ClientOptions{
    fetch ? : FetchLike;
    headers ? : Record<
    string, string
    >;
}

export class XidlClientError extends Error{
    readonly code : number;
    readonly status : number;
    constructor(
    message : string, code : number, status : number
    ){
        super(
        message
        );
        this.code = code;
        this.status = status;
    }
}

function resolveFetch(
fetchImpl ? : FetchLike
) : FetchLike{
    if(fetchImpl){
        return fetchImpl;
    }

    return window.fetch.bind(
    undefined
    );
}

function joinUrl(
baseUrl : string, path : string
) : string{
    if(baseUrl.endsWith(
    "/"
    )&&path.startsWith(
    "/"
    )){
        return`${baseUrl}${path.slice(
            1
            )}`;
    }
    if(!baseUrl.endsWith(
    "/"
    )&&!path.startsWith(
    "/"
    )){
        return`${baseUrl}/${path}`;
    }
    return`${baseUrl}${path}`;
}

function encodePathSegment(
value : unknown
) : string{
    return encodeURIComponent(
    String(
    value
    )
    );
}

function encodePathCatchAll(
value : unknown
) : string{
    return String(
    value
    )
    .split(
    "/"
    )
    .map(
    (
    segment
    ) => encodeURIComponent(
    segment
    )
    )
    .join(
    "/"
    );
}

function encodeQueryValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeHeaderValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeCookieValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

async function parseXidlError(
resp : Response
) : Promise<
XidlClientError
>{
    const status = resp.status;
    try{
        const body = await resp.json(

        );
        if(body&&typeof body.code==="number"&&typeof body.msg==="string"){
            return new XidlClientError(
            body.msg, body.code, status
            );
        }
    }catch{
        // ignored
    }
    return new XidlClientError(
    `http error: ${status}`, status, status
    );
}

async function*sseJsonStream<T>(
fetchImpl : FetchLike, url : string, options : RequestInit,
) : AsyncIterable<
T
>{
    const headers = new Headers(
    options.headers??{
    }
    );
    if(!headers.has(
    "Accept"
    )){
        headers.set(
        "Accept", "text/event-stream"
        );
    }
    const resp = await fetchImpl(
    url, {
        ...options, headers
    }
    );
    if(!resp.ok){
        throw await parseXidlError(
        resp
        );
    }
    if(!resp.body){
        throw new XidlClientError(
        "sse response has no body", 500, resp.status
        );
    }

    const reader = resp.body.getReader(

    );
    const decoder = new TextDecoder(

    );
    let buffer = "";
    let event = "message";
    let dataLines : string[] = [

    ];
    const flushEvent = (

    ) : {
        done : boolean;
        value ? : T} | null => {
        if(event.length===0&&dataLines.length===0){
            return null;
        }
        const payload = dataLines.join(
        "\n"
        );
        const currentEvent = event||"message";
        event = "message";
        dataLines = [

        ];
        if(currentEvent==="complete"){
            return{
                done : true
            };
        }
        if(currentEvent==="error"){
            let msg = payload;
            let code = 500;
            try{
                const parsed = JSON.parse(
                payload
                );
                if(parsed&&typeof parsed.msg==="string"){
                    msg = parsed.msg;
                }
                if(parsed&&typeof parsed.code==="number"){
                    code = parsed.code;
                }
            }catch{
                // keep raw payload
            }
            throw new XidlClientError(
            msg||"stream error", code, resp.status
            );
        }
        if(currentEvent==="next"||currentEvent==="message"){
            return{
                done : false, value : JSON.parse(
                payload
                )as T
            };
        }
        return null;

    };
    while(true){
        const{value, done} = await reader.read(

        );
        if(done){
            break;
        }
        buffer+=decoder.decode(
        value, {
            stream : true
        }
        );
        while(true){
            const idx = buffer.indexOf(
            "\n"
            );
            if(idx<0){
                break;
            }
            const line = buffer.slice(
            0, idx
            ).replace(
            /\r$/, ""
            );
            buffer = buffer.slice(
            idx+1
            );
            if(line.length===0){
                const flushed = flushEvent(

                );
                if(flushed?.done){
                    return;
                }
                if(flushed?.value!==undefined){
                    yield flushed.value;
                }
                continue;
            }
            if(line.startsWith(
            ":"
            )){
                continue;
            }
            if(line.startsWith(
            "event:"
            )){
                event = line.slice(
                "event:".length
                ).trim(

                );
                continue;
            }
            if(line.startsWith(
            "data:"
            )){
                dataLines.push(
                line.slice(
                "data:".length
                ).trimStart(

                )
                );
            }
        }
    }
}

function ndjsonBody<T>(
source : AsyncIterable<
T
>
) : ReadableStream<
Uint8Array
>{
    const encoder = new TextEncoder(

    );
    const iterator = source[Symbol.asyncIterator](

    );
    return new ReadableStream<
    Uint8Array
    >(
    {
        async pull(
        controller
        ){
            const next = await iterator.next(

            );
            if(next.done){
                controller.close(

                );
                return;
            }
            controller.enqueue(
            encoder.encode(
            `${JSON.stringify(
                next.value
                )}\n`
            )
            );

        }, async cancel(

        ){
            if(iterator.return){
                await iterator.return(

                );
            }
        },
    }
    );
}

export class HttpStreamSseBindingsServiceClient{
    private readonly baseUrl : string;
    private readonly fetchImpl : FetchLike;
    private readonly defaultHeaders : Record<
    string, string
    >;
    constructor(
    baseUrl : string, options : ClientOptions = {
    }
    ){
        this.baseUrl = baseUrl;
        this.fetchImpl = resolveFetch(
        options.fetch
        );
        this.defaultHeaders = options.headers??{
        };
    }

    watch_project(
    project_id : string, cursor : string | undefined, trace_id : string
    ) : AsyncIterable<
    types.ProjectEvent
    >{
        const parsed = zodSchemas.HttpStreamSseBindingsServiceWatchProjectRequestSchema.parse(
        {
            "project_id" : project_id, "cursor" : cursor, "trace_id" : trace_id
        }
        );
        let path = "/projects/{project_id}/events";
        path = path.replace(
        "{"+"project_id"+"}", encodePathSegment(
        parsed["project_id"]
        )
        );
        const query = new URLSearchParams(

        );
        query.set(
        "cursor", encodeQueryValue(
        parsed["cursor"]
        )
        );
        const queryString = query.toString(

        );
        if(queryString.length>0){
            path = `${path}?${queryString}`;
        }
        const headers = new Headers(
        this.defaultHeaders
        );
        headers.set(
        "X-Trace-Id", encodeHeaderValue(
        parsed["trace_id"]
        )
        );
        const options = {
            method : "GET", headers
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        return sseJsonStream<
        types.ProjectEvent
        >(
        this.fetchImpl, url, options
        );
    }
}
===============
http_stream_sse_bindings.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export interface ProjectEvent{
    id : string;
    payload : string;
}
===============
http_stream_sse_bindings.iface.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export interface HttpStreamSseBindingsServiceWatchProjectRequest{
    project_id : string;
    cursor ? : string;
    trace_id : string;
}
===============
http_stream_sse_bindings.iface.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export const HttpStreamSseBindingsServiceWatchProjectRequestSchema = z.object(
{
    project_id : z.string(

    ), cursor : z.string(

    ).optional(

    ), trace_id : z.string(

    ),
}
);
export type HttpStreamSseBindingsServiceWatchProjectRequest = z.infer<
typeof HttpStreamSseBindingsServiceWatchProjectRequestSchema
>;
===============
http_stream_sse_bindings.rs
===============
#[derive(Default)]
pub struct ProjectEvent {
    pub id: String,
    pub payload: String,
}
impl ProjectEvent {}
===============
http_stream_sse_bindings.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export const ProjectEventSchema = z.object(
{
    id : z.string(

    ), payload : z.string(

    ),
}
);
export type ProjectEvent = z.infer<
typeof ProjectEventSchema
>;
