xidlc/tests/snapshots/codegen_snapshot__ts__interface_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
interface_dcl.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

export{};
===============
interface_dcl.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

import{z}from"zod";
import{xjson}from"@xidl/xidl-typescript-codec";
