xidlc/tests/snapshots/codegen_snapshot__ts__misc.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
misc.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    export type Color = "red" | "green" | "blue";

    

export type FooSeq = Array<Foo>;

    

export type FooSeq = Array<Foo>;

    

export type FooSeq = Array<Foo>;

    

export interface Foo {
        
            value: number;
                chain: FooSeq;
            }

    

export type BarSeq = Array<Bar>;

    

export type Bar = { l_mem: number } | { s_mem: { d_mem: number, nested: BarSeq } };

    export namespace M {
    export type Size = "small" | "medium" | "large";
}

export {};
===============
misc.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    export const ColorSchema = z.enum(["red", "green", "blue"]);

    
export const FooSeqSchema: z.ZodType<import("./misc").FooSeq> = z.lazy(() => z.array(FooSchema));

    
export const FooSeqSchema: z.ZodType<import("./misc").FooSeq> = z.lazy(() => z.array(FooSchema).length(12));

    
export const FooSeqSchema: z.ZodType<import("./misc").FooSeq> = z.lazy(() => z.array(FooSchema));

    
export const FooSchema: z.ZodType<import("./misc").Foo> = z.lazy(() => z.object({
    
        value: z.coerce.number().int(),
    
        chain: FooSeqSchema
    
}));

    
export const BarSeqSchema: z.ZodType<import("./misc").BarSeq> = z.lazy(() => z.array(BarSchema));

    
export const BarSchema: z.ZodType<import("./misc").Bar> = z.lazy(() => z.union([z.object({ l_mem: z.coerce.number().int() }), z.object({ s_mem: z.object({ d_mem: z.coerce.number(), nested: BarSeqSchema }) })]));

    export namespace M {
    export const SizeSchema = z.enum(["small", "medium", "large"]);
}
