xidlc/tests/snapshots/codegen_snapshot__ts__module_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
module_dcl.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

export{};
===============
module_dcl.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

import{z}from"zod";
import{xjson}from"xidl-typescript-codec";
