xidlc/tests/snapshots/codegen_snapshot__ts__preproc.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
preproc.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
===============
preproc.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
