xidlc/tests/snapshots/codegen_snapshot__ts__self_referential_struct.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
self_referential_struct.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface Node {
        
            next: Node;
                prev?: Node;
                children: Array<Node>;
            }

    

export interface Left {
        
            right: Right;
            }

    

export interface Right {
        
            left: Left;
            }

export {};
===============
self_referential_struct.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
export const NodeSchema: z.ZodType<import("./self_referential_struct").Node> = z.lazy(() => z.object({
    
        next: NodeSchema,
    
        prev: NodeSchema.optional(),
    
        children: z.array(NodeSchema)
    
}));

    
export const LeftSchema: z.ZodType<import("./self_referential_struct").Left> = z.lazy(() => z.object({
    
        right: RightSchema
    
}));

    
export const RightSchema: z.ZodType<import("./self_referential_struct").Right> = z.lazy(() => z.object({
    
        left: LeftSchema
    
}));
