xidlc/tests/snapshots/codegen_snapshot__ts__struct_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_def.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface A {
        
        }

    

export interface A {
        
            a: number;
            }

    

export interface A {
        
            a: A.b;
            }

    

export interface A extends B {
    
        }

    

export interface _A {
        
        }

    

export interface _Custom {
        
            var_inner: Inner;
            }

    

export interface HelloWorld {
        
            a: u8;
                b: Array<u16>;
                c: Array<Array<string>>;
                c: Array<u8>;
                d: string;
                d: string;
                d: any;
            }

export {};
===============
struct_def.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const ASchema = z.object({
        
    });

    
    export const ASchema = z.object({
        
            a: z.coerce.number().int()
        
    });

    
    export const ASchema = z.object({
        
            a: A.bSchema
        
    });

    
    export const ASchema = z.object({
        
    });

    
    export const _ASchema = z.object({
        
    });

    
    export const _CustomSchema = z.object({
        
            var_inner: InnerSchema
        
    });

    
    export const HelloWorldSchema = z.object({
        
            a: u8Schema,
        
            b: z.array(u16Schema).length(10),
        
            c: z.array(z.array(z.coerce.string()).length(10)).length(20),
        
            c: z.array(u8Schema),
        
            d: z.coerce.string(),
        
            d: z.coerce.string(),
        
            d: z.any()
        
    });
