xidlc/tests/snapshots/codegen_snapshot__ts__struct_derive.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_derive.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface A {
        
        }

    

export interface B {
        
        }

export {};
===============
struct_derive.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const ASchema = z.object({
        
    });

    
    export const BSchema = z.object({
        
    });
