xidlc/tests/snapshots/codegen_snapshot__ts__struct_empty.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_empty.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

export{};
===============
struct_empty.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

import{z}from"zod";
import{xjson}from"@xidl/xidl-typescript-codec";
