xidlc/tests/snapshots/codegen_snapshot__ts__struct_simple.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_simple.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
struct_simple.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
