xidlc/tests/snapshots/codegen_snapshot__ts__struct_skip.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_skip.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface SkipStruct {
        
            a: number;
                c: number;
            }

export {};
===============
struct_skip.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const SkipStructSchema = z.object({
        
            a: z.coerce.number().int(),
        
            c: z.coerce.number().int()
        
    });
