xidlc/tests/snapshots/codegen_snapshot__ts__template_module_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
template_module_dcl.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.
===============
template_module_dcl.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.
import{z}from"zod";
